# CV_Tray_Detection

./: .gitignore  .gitmodules  CMakeLists.txt  ImagePredictor.cpp  ImagePredictor.h  README.md  functions.cpp  functions.h  main.cpp  main_untouched.cpp
dataset_cv/: main.py  true_labels.txt
python_code/: CV_Tray_Classificator.ipynb
python_code/Dataset/: add_padding.py  data_augmentation.py  image_cropper.py  image_fetcher.py
results/: resultsMAP.txt  resultsmIoU.txt
results/tray1/: leftover1Estimation.txt  leftover2Estimation.txt  leftover3Estimation.txt
results/tray1/bounding_boxes/: food_image_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt  leftover4_bounding_box.txt
results/tray2/: leftover1Estimation.txt  leftover2Estimation.txt  leftover3Estimation.txt
results/tray2/bounding_boxes/: food_image_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt  leftover4_bounding_box.txt
results/tray3/: leftover1Estimation.txt  leftover2Estimation.txt  leftover3Estimation.txt
results/tray3/bounding_boxes/: food_image_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt  leftover4_bounding_box.txt
results/tray4/: leftover1Estimation.txt  leftover2Estimation.txt  leftover3Estimation.txt
results/tray4/bounding_boxes/: food_image_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt  leftover4_bounding_box.txt
results/tray5/: leftover1Estimation.txt  leftover2Estimation.txt  leftover3Estimation.txt
results/tray5/bounding_boxes/: food_image_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt  leftover4_bounding_box.txt
results/tray6/: leftover1Estimation.txt  leftover2Estimation.txt  leftover3Estimation.txt
results/tray6/bounding_boxes/: food_image_bounding_box.txt  leftover2_bounding_box.txt  (+2 more)
results/tray7/: leftover1Estimation.txt  leftover2Estimation.txt  leftover3Estimation.txt
results/tray8/: leftover1Estimation.txt  leftover2Estimation.txt  leftover3Estimation.txt
single_dishes/: true_clusters.txt  true_labels.txt
src/: CMakeLists.txt  main.cpp  model_usage_example.cpp  segment_dual_plates.cpp
src/bread_detector/: bread_detector_empty_tray.cpp  bread_detector_empty_tray.h  bread_detector_full_tray.cpp  bread_detector_full_tray.h
src/dish_detector/: dish_detector.cpp  dish_detector.h
src/model/: ImagePredictor.cpp  ImagePredictor.h
src/salad_detector/: salad_detector.cpp  salad_detector.h
src/utils/: datasetExecution.cpp  datasetExecution.h  emptyTrayExecution.cpp  emptyTrayExecution.h  fullTrayExecution.cpp  fullTrayExecution.h  parseFile.cpp  parseFile.h  performances.cpp  performances.h
tests/: CMakeLists.txt  benchmarking_model.cpp  model_accuracy.cpp
(+4 files in other folders)
